Create PUBLIC role on start and grant initial privileges
Change how password change required is handled