@@ -5,7 +5,6 @@
  */
 package com.neo4j.server.security.enterprise.systemgraph;
 
-import com.neo4j.server.security.enterprise.auth.plugin.api.PredefinedRoles;
 import com.neo4j.test.TestEnterpriseDatabaseManagementServiceBuilder;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -16,9 +15,9 @@ import picocli.CommandLine;
 import java.io.File;
 import java.io.PrintStream;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.neo4j.cli.ExecutionContext;
 import org.neo4j.commandline.admin.security.SetDefaultAdminCommand;
@@ -26,6 +25,8 @@ import org.neo4j.commandline.admin.security.SetInitialPasswordCommand;
 import org.neo4j.configuration.GraphDatabaseSettings;
 import org.neo4j.dbms.api.DatabaseManagementService;
 import org.neo4j.graphdb.GraphDatabaseService;
+import org.neo4j.graphdb.Node;
+import org.neo4j.graphdb.ResourceIterator;
 import org.neo4j.graphdb.Result;
 import org.neo4j.graphdb.Transaction;
 import org.neo4j.internal.kernel.api.security.AuthenticationResult;
@@ -40,6 +41,12 @@ import org.neo4j.test.TestDatabaseManagementServiceBuilder;
 import org.neo4j.test.extension.EphemeralFileSystemExtension;
 import org.neo4j.test.extension.Inject;
 
+import static com.neo4j.server.security.enterprise.auth.plugin.api.PredefinedRoles.ADMIN;
+import static com.neo4j.server.security.enterprise.auth.plugin.api.PredefinedRoles.ARCHITECT;
+import static com.neo4j.server.security.enterprise.auth.plugin.api.PredefinedRoles.EDITOR;
+import static com.neo4j.server.security.enterprise.auth.plugin.api.PredefinedRoles.PUBLIC;
+import static com.neo4j.server.security.enterprise.auth.plugin.api.PredefinedRoles.PUBLISHER;
+import static com.neo4j.server.security.enterprise.auth.plugin.api.PredefinedRoles.READER;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
@@ -47,6 +54,7 @@ import static org.hamcrest.Matchers.oneOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.neo4j.configuration.GraphDatabaseSettings.SYSTEM_DATABASE_NAME;
+import static org.neo4j.graphdb.Label.label;
 import static org.neo4j.kernel.api.security.AuthManager.INITIAL_PASSWORD;
 import static org.neo4j.kernel.api.security.AuthManager.INITIAL_USER_NAME;
 
@@ -84,6 +92,27 @@ class SystemGraphRealmUpgradeIT
     }
 
     @Test
+    void shouldCreateDefaultRoles()
+    {
+        // GIVEN
+        createCommunityWithUsers();
+
+        // WHEN
+        enterpriseDbms = getEnterpriseManagementService();
+
+        // THEN
+        GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
+        try ( Transaction tx = database.beginTx() )
+        {
+            ResourceIterator<Node> roles = tx.findNodes( label( "Role" ) );
+            List<String> roleNames = roles.stream().map( role -> role.getProperty( "name" ).toString() ).collect( Collectors.toList() );
+            assertThat( roleNames, containsInAnyOrder( ADMIN, ARCHITECT, PUBLISHER, EDITOR, READER, PUBLIC ) );
+            tx.commit();
+        }
+        enterpriseDbms.shutdown();
+    }
+
+    @Test
     void shouldUpgradeWithDefaultUser()
     {
         // GIVEN
@@ -95,7 +124,7 @@ class SystemGraphRealmUpgradeIT
         // THEN
         GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
-        assertThat( users, containsInAnyOrder( new UserResult( INITIAL_USER_NAME, List.of( PredefinedRoles.ADMIN ) ) ) );
+        assertThat( users, containsInAnyOrder( new UserResult( INITIAL_USER_NAME, List.of( ADMIN, PUBLIC ) ) ) );
     }
 
     @Test
@@ -110,7 +139,7 @@ class SystemGraphRealmUpgradeIT
         // THEN
         GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
-        assertThat( users, containsInAnyOrder( new UserResult( "Alice", List.of( PredefinedRoles.ADMIN ) ) ) );
+        assertThat( users, containsInAnyOrder( new UserResult( "Alice", List.of( ADMIN, PUBLIC ) ) ) );
     }
 
     @Test
@@ -126,8 +155,8 @@ class SystemGraphRealmUpgradeIT
         GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
         assertThat( users, containsInAnyOrder(
-                new UserResult( INITIAL_USER_NAME, List.of( PredefinedRoles.ADMIN ) ),
-                new UserResult( "Alice", Collections.emptyList() ) )
+                new UserResult( INITIAL_USER_NAME, List.of( ADMIN, PUBLIC ) ),
+                new UserResult( "Alice", List.of( PUBLIC ) ) )
         );
     }
 
@@ -143,7 +172,7 @@ class SystemGraphRealmUpgradeIT
         // THEN
         GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
-        assertThat( users, containsInAnyOrder( new UserResult( INITIAL_USER_NAME, List.of( PredefinedRoles.ADMIN ) ) ) );
+        assertThat( users, containsInAnyOrder( new UserResult( INITIAL_USER_NAME, List.of( ADMIN, PUBLIC ) ) ) );
         assertLogin( (GraphDatabaseAPI) database, INITIAL_USER_NAME, "abc123" );
     }
 
@@ -188,8 +217,8 @@ class SystemGraphRealmUpgradeIT
         GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
         assertThat( users, containsInAnyOrder(
-                new UserResult( "Alice", List.of( PredefinedRoles.ADMIN ) ),
-                new UserResult( "Bob", Collections.emptyList() ) )
+                new UserResult( "Alice", List.of( ADMIN, PUBLIC ) ),
+                new UserResult( "Bob", List.of( PUBLIC ) ) )
         );
     }
 
@@ -207,8 +236,8 @@ class SystemGraphRealmUpgradeIT
         GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
         assertThat( users, containsInAnyOrder(
-                new UserResult( "Alice", List.of( PredefinedRoles.ADMIN ) ),
-                new UserResult( INITIAL_USER_NAME, Collections.emptyList() ) )
+                new UserResult( "Alice", List.of( ADMIN, PUBLIC ) ),
+                new UserResult( INITIAL_USER_NAME, List.of( PUBLIC ) ) )
         );
     }
 
@@ -226,8 +255,8 @@ class SystemGraphRealmUpgradeIT
         GraphDatabaseService database = enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
         assertThat( users, containsInAnyOrder(
-                new UserResult( INITIAL_USER_NAME, List.of( PredefinedRoles.ADMIN ) ),
-                new UserResult( "Alice", Collections.emptyList() ) )
+                new UserResult( INITIAL_USER_NAME, List.of( ADMIN, PUBLIC ) ),
+                new UserResult( "Alice", List.of( PUBLIC ) ) )
         );
     }
 
@@ -246,8 +275,8 @@ class SystemGraphRealmUpgradeIT
         GraphDatabaseAPI database = (GraphDatabaseAPI) enterpriseDbms.database( SYSTEM_DATABASE_NAME );
         List<UserResult> users = getUsers( database );
         assertThat( users, containsInAnyOrder(
-                new UserResult( "Alice", List.of( PredefinedRoles.ADMIN ) ),
-                new UserResult( INITIAL_USER_NAME, Collections.emptyList() ) )
+                new UserResult( "Alice", List.of( ADMIN, PUBLIC ) ),
+                new UserResult( INITIAL_USER_NAME, List.of( PUBLIC ) ) )
         );
         assertLogin( database, "Alice", DEFAULT_PASSWORD );
         assertLogin( database, INITIAL_USER_NAME, INITIAL_PASSWORD );
